--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-ftp-deploy": "^0.1.10",
     "grunt-sass": "^1.0.0",
     "load-grunt-tasks": "^3.2.0",
     "time-grunt": "^1.2.1"
