--- a/package.json
+++ b/package.json
@@ -9,12 +9,25 @@
   "author": "keoghpe",
   "license": "GNU GPL v2",
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-jshint": "^0.11.2",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-ftp-deploy": "^0.1.10",
-    "grunt-sass": "^1.0.0",
+    "babel": "^5.5.7",
+    "babelify": "^6.1.2",
+    "browserify": "^10.2.4",
+    "debowerify": "^1.3.1",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^5.1.0",
+    "gulp-concat": "^2.5.2",
+    "gulp-livereload": "^3.8.0",
+    "gulp-sass": "^2.0.1",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.5",
+    "gulp-watch": "^4.2.4",
     "load-grunt-tasks": "^3.2.0",
-    "time-grunt": "^1.2.1"
+    "main-bower-files": "^2.8.0",
+    "time-grunt": "^1.2.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-ftp": "^0.4.1",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.2.2"
   }
 }
