--- a/package.json
+++ b/package.json
@@ -8,28 +8,51 @@
   },
   "author": "keoghpe",
   "license": "GNU GPL v2",
+  "browser": {
+    "bootstrap": "./bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"
+  },
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
+  },
+  "browserify-shim": {
+    "bootstrap": {
+      "depends": [
+        "jquery:jQuery"
+      ]
+    }
+  },
   "devDependencies": {
     "babel": "^5.5.7",
     "babelify": "^6.1.2",
     "browserify": "^10.2.4",
+    "browserify-shim": "^3.8.9",
     "debowerify": "^1.3.1",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.1.0",
     "gulp-concat": "^2.5.2",
+    "gulp-email": "0.0.6",
     "gulp-livereload": "^3.8.0",
     "gulp-sass": "^2.0.1",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.5",
     "gulp-watch": "^4.2.4",
+    "gulp-zip": "^3.0.2",
     "load-grunt-tasks": "^3.2.0",
     "lodash": "^3.9.3",
     "lodash.assign": "^3.2.0",
+    "mailgun-js": "^0.7.0",
     "main-bower-files": "^2.8.0",
+    "pageres": "^1.4.0",
     "time-grunt": "^1.2.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-ftp": "^0.4.1",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.2"
+  },
+  "dependencies": {
+    "jquery": "^2.1.4"
   }
 }
